--- a/index.scss
+++ b/index.scss
@@ -3,6 +3,8 @@
   --bg-1: #555;
   --fg-white: #ccc;
   --fg-black: #444;
+
+  --c-tile-size: 5rem;
 }
 
 html {
@@ -31,8 +33,8 @@ body {
 }
 
 .c-tile {
-  width: 80px;
-  height: 80px;
+  width: var(--c-tile-size);
+  height: var(--c-tile-size);
   display: inline-block;
 }
 
